syntax = "proto3";
package sso;

option go_package = "github.com/nais2008/final_project_go_yandex/internal/proto";

message Task {
  int32 id = 1;
  double arg1 = 2;
  double arg2 = 3;
  string operation = 4;
  int32 operation_time = 5;
}

message GetTaskRequest {}

message GetTaskResponse {
  Task task = 1;
}

message SubmitResultRequest {
  int32 id = 1;
  double result = 2;
}

message SubmitResultResponse {}

service Agent {
  rpc GetTask (GetTaskRequest) returns (GetTaskResponse);
  rpc SubmitResult (SubmitResultRequest) returns (SubmitResultResponse);
}


